Update loader text and switch UI font to Nunito Sans

--- a/frontend/theme/templates/home.html
+++ b/frontend/theme/templates/home.html
@@ -4,7 +4,7 @@
 <section id="screen-loading" class="screen is-visible">
   <div class="loader">
     <div class="spinner"></div>
-    <p class="small">Проверяем Telegram initData...</p>
+    <p class="small">Авторизация...</p>
   </div>
 </section>
 
